--- a/estilos/style.css
+++ b/estilos/style.css
@@ -67,9 +67,14 @@ section#inicio > p {
     width: 300px;
 }
 
-section#inicio > a {
+section#inicio > div{
+    position: relative;
+    height: 100px;
+}
+
+section#inicio > div > a {
     position: absolute;
-    top: 95%;
+    top: 50%;
     left: 38%;
     display: block;
     background-color: rgb(177, 177, 2);
@@ -82,15 +87,15 @@ section#inicio > a {
     padding: 15px;
 }
 
-section#inicio > a:hover {
+section#inicio > div > a:hover {
     background-color: rgb(206, 206, 5);
-    top: 93%;    
+    top: 40%;    
     transition: background-color 0.5s ease, top 0.5s ease;
 
 }
 
 section#inicio article#introducao {
-    margin-top: 150px;
+    margin-top: 20px;
 }
 
 a {
